# cleaning_agent

./: .gitignore  app.py  pyproject.toml  readme.md  requirements.txt
agents/: clean_suggestions_agent.py
cleaning_agent/: __init__.py
cleaning_agent/agents/: __init__.py  clean_suggestions_agent.py
cleaning_agent/views/: streamlit_views.py
config/: model_config.py  prompt_config.json
examples/: app.py
views/: __init__.py  streamlit_view.py
